# automated-factorio

./: .gitignore  base.ilp  bp.json  bp.json.b64  matplotlibrc  micro.lp  pyproject.toml  readme.md  schedule.bp
blueprints/: assembly-machine-1-fluid.bp  assembly-machine-1.bp  automated1.json.base64  electric-furnace.bp
blueprints/base/: assembly-machine-fluid.b64  assembly-machine.b64  chemical-plant.b64  electric-furnace.b64  oil-refinery.b64
data/: angels-bobs.json  base.in.json  base.json  empty-spaceship.json.b64  krastorio2.json  micro.gml  mybase.json.b64  spaceship.json.b64
fio/: __init__.py  arith.py  binpacking.py  blueprint.py  builder.py  database.py  flow.py  knap.py  layout.py  module.py  mytypes.py  naive_routing.py  orthogonal.py  place_and_route.py  placement.py  splitter.py  transport.py
notebooks/: Untitled.ipynb  Untitled1.ipynb  assembly_fluid.json  belting.ipynb  cleanup-2022-12-22.ipynb  cleanup-2023-09-03.ipynb  factorio-1.ipynb  factorio-2.ipynb  factorio-3.ipynb  factorio-4.ipynb  factorio-5.ipynb  factorio-6.ipynb  factorio-full-generate.ipynb  gridsearch_scoring.ipynb  jarnac.ipynb  lassodp.ipynb  layout.ipynb  lu-decomposition.ipynb  quality.ipynb  reconstruction.ipynb  requests.ipynb  robot-base.ipynb  ruzzle.ipynb  schedule.ipynb  spider.ipynb  thing.ipynb  votes.ipynb  wang.ipynb
notebooks/.ipynb_checkpoints/: factorio-full-generate-checkpoint.ipynb
typings/mip/: __init__.pyi  _version.pyi  callbacks.pyi  cbc.pyi  conflict.pyi  constants.pyi  entities.pyi  exceptions.pyi  gurobi.pyi  lists.pyi  log.pyi  model.pyi  ndarray.pyi  (+1 more)
