[project]
name = "fio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "jq>=1.10.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "mip>=1.16rc0",
    "networkx>=3.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "requests>=2.32.5",
]
